--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
   <div class="row center valign-wrapper">
     <div class="col s12 l4  ">
-      <img src="assets/img/aman.jpg" alt="" class=" aman circle responsive-img  z-depth-3" >
+      <img src="assets/img/Aman.jpg" alt="" class=" aman circle responsive-img  z-depth-3" >
     </div>
 
    <div class="col s12 l7 m7 offset-l1 offset-m3 ">
